# compyle

./: .gitignore  .ocamlformat  Dockerfile  Makefile  README.md  ast.ml  check_test_percentage.sh  compyle.ml  compyle.opam  dune  dune-project  example.cmpy  example.out  irgen.ml  lexing_stack.ml  parser.ml  parser.mli  parser.mly  parser.output  sample.c  sast.ml  scanner.mll  semant.ml  test.bc  test.ml  test1.cmpy  test2.cmpy  test2.ml  test3.cmpy
.github/workflows/: test-runner.yml
lib/: .sast.ml.swp  ast.ml  dune  irgen.ml  parser.mly  sast.ml  scanner.mll  semant.ml
test/: dune  scan_and_parse_tests.ml  semant_test.ml
